[package]
name = "rt-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
anyhow = "1.0.56"
chrono = "0.4.19"
nom = "7.1.1"
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
